pavo 1.0
------------------------------------------------------------------------------

MINOR FEATURES AND BUG FIXES
* vismodel() vonkries = TRUE does not return a NULL result
* vismodel() works with a single spectrum object
* tcsplot() allows greater control of tetrahedron appearance

pavo 0.3-1
------------------------------------------------------------------------------
NEW FUNCTIONS

* irrad2flux() and flux2irrad() to convert illuminant measurements

MINOR FEATURES AND BUG FIXES

* vismodel() less cryptic error messages
* as_rspec() fix message pertaining wavelength column
* getspec() now removes empty columns (generated by bad tabulation)
* plot.rspec() fix color labeling issue (previously, when user specified fewer colors than number of spectra, 'stack' and 'overlay' colored spectra differently)

pavo 0.3
------------------------------------------------------------------------------
NEW FUNCTIONS

* subset() class methods for rspec, vismodel and tcs
* summary() method for vismodel, returns attributes used in visual model

VISUAL MODEL

* vismodel() output includes only Qi or fi (as selected by qcatch argument)
* vismodel() von Kries correction is now an optional argument
* coldist() subset argument for partial filtering
* Updated sensitivity curves

MINOR FEATURES

* getspec() works with Avasoft 8 output
* aggspec() if no "by" argument is supplied, applies function to all spectra

BUG FIXES

* tcs() accepts receptor names other than usml, issues warning
* aggplot() allows control for different line types per spectra
* voloverlap() now assigns darkgrey color for overlap if color vector is of length 1 or 2

pavo 0.1-2
------------------------------------------------------------------------------
NEW FUNCTIONS

* merge.rspec() combines rspec objects in a single object

VISUAL MODEL

* Changed vismodel() output: von Kries correction is now an optional argument, output includes only Qi and fi